@@ -1,3 +1,4 @@
+  - Changed kernel load address from 0x4000 to 0x800000.
   - Added simple USB console.
 
 version 0.2: 
